welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code

 def HaveBaggle():Boolean = {
    if (estSurBiscuit() == true) {
        return true
    }
    else
    {
    	return
    }
}

for(i <- 1 to 7)
{
	avance()
	HaveBaggle()
}
